--- a/front-end/src/styles/Home.module.scss
+++ b/front-end/src/styles/Home.module.scss
@@ -22,6 +22,11 @@
     flex-direction: column;
   }
 
+  h1{
+    color: var(--white);
+    padding-bottom: 1rem;
+  }
+
   form button{
     height: 40px;
     font-size: 1.2rem;
